[package]
name = "ytterbium"
version = "0.1.0"
authors = ["Andreas Linz <klingt.net@gmail.com>"]
description = "An OSC controllable realtime audio synthesizer written in Rust"
keywords = ["audio", "synth", "synthesizer", "osc", "instrument"]
# documentation = "..."
# homepage = "https://klingt.net"
# repository = "..."
# license = "MIT"
# license-file = "LICENSE"
readme = "README.md"

[dependencies]
docopt = "^0.6"
rustc-serialize = "^0.3"
rosc = "^0.1"

[[bin]]
doc = false
name = "ytterbium"

[[bin]]
doc = false
name = "osc_err"
path = "src/osc_err.rs"
