[package]
name = "ytterbium"
version = "0.1.0"
authors = ["Andreas Linz <klingt.net@gmail.com>"]
description = "An OSC controllable realtime audio synthesizer written in Rust"
keywords = ["audio", "synth", "synthesizer", "osc", "instrument"]
# documentation = "..."
# homepage = "https://klingt.net"
# repository = "..."
# license = "MIT"
# license-file = "LICENSE"
readme = "README.md"

[dependencies]
rosc = "^0.1"
portmidi = "^0.2"
rsoundio = "^0.1"
rb = "^0.2"
clap = "^2.2"

[[bin]]
doc = false
name = "ytterbium"
