[package]
name = "ytterbium"
version = "0.1.0"
authors = ["Andreas Linz <klingt.net@gmail.com>"]
description = "An OSC controllable realtime audio synthesizer written in Rust"
keywords = ["audio", "synth", "synthesizer", "osc", "instrument"]
# documentation = "..."
# homepage = "https://klingt.net"
# repository = "..."
# license = "MIT"
# license-file = "LICENSE"
readme = "README.md"

[dependencies]
rosc = "^0.1"
portmidi = "^0.2"
rsoundio = "^0.1"
rb = "^0.2"
clap = "^2.2"
rustfft = "^2.0"
num = "^0.1"
rand = "^0.3"
approx = "^0.1"
rustc-serialize = "^0.3"
bincode = "^0.5"
itertools = "^0.4"
clippy={version="^0", optional=true}

[dev-dependencies]
hound="2.0"
rand="0.3"

[features]
lints = ["clippy"]

[[bin]]
doc = false
name = "ytterbium"
